BEEBEEP (Secure Lan Messanger)

BeeBEEP 3.0.4
- Hive protocol added: BeeBEEPs tell each other the host address of the connected users. It can be disabled in beebeep.rc (option)
- Check for new version at startup. It can be disabled in beebeep.rc (option)
- Use your name instead of you in the chat messages (option)

BeeBEEP 3.0.3
- Image preview is also showed when an upload is completed
- The multicast group can be specified as host address in beebeep.rc (option)
- Key Return can be disabled as shortcut to send chat message (option)
- Shortcut "Send chat message" added
- Spell checking can be enabled (thanks to HUNSPELL library)
- Word completer can be enabled (option)
- Chat with all users can be disabled in beebeep.rc (option)
- Fixed emoticons compatibility issue between Qt4 and Qt5 version
- Keep alive over socket implemented
- Auto connection when network interface is up again
- Application icon blinks if there are unread messages
- Fixed saving bug on system session shutdown
- Message icon added in the main toolbar (it is enabled if there are some unread messages)

BeeBEEP 3.0.2
- Fixed compatibility with Windows 10 with Qt 5.5 (it will become the default windows release)
- Fixed compatibility with Windows XP with Qt 4.8.6 (windows XP release)
- mDnsResponder library updated to 330.10 in Windows
- For better compatibility BeeBEEP now accepts connection only from IPv4 address
- IPv6 protocol can be enabled by "UseIPv6" in beebeep.rc (option)
- Shortcut "Minimize all chats" added

BeeBEEP 3.0.1
- Workgroups (in the search users dialog)
- Accept connections only from workgroups (option)
- Recently used User Status can be selected
- Drop or paste images on the message box
- Set background color as status for users in list (option)
- Enable and edit custom shortcuts (option)
- Show only message notifications in system tray (option)
- File beehosts.ini now accepts host address and port (see beehosts_example.ini for more informations)